Slight updates to logger & DBcontroller Fixed ranker bug